--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@
 }
 .h-item{
     min-height: 20px;
-    background-color: rgba(48, 48, 48, 0.5);
+    background-color: rgba(85, 85, 85, 0.5);
     color: white;
     font-size: 12px;
     line-height: 20px;
@@ -33,7 +33,7 @@
     min-height: 20px;
     padding: 5px;
     color: white;
-    background-color: rgba(48, 48, 48, 0.5);
+    background-color: rgba(85, 85, 85, 0.5);
     margin: 5px;
     line-height: 20px;
     vertical-align: middle;
@@ -74,15 +74,17 @@ img{
     font-size: 12px;
 }
 .footer-container{
-    height: 100px;
+    height: 80px;
     width: 100%;
     margin-top: 50px;
     background-color: chocolate;
+    
 }
 .flex-foot{
    display: flex;
-    height: 100px;
+    min-height: 50px;
     width: 100%;
+    justify-content: space-between;
 }
 .end-meet{
     height: 100%;
@@ -97,11 +99,30 @@ img{
 
 i{
     color: white;
+    font-size: 14px;
+    
 }
-footer > p{
+p{
     color: white;
 }
 .flex-col{
     display: flex;
     flex-direction: column;
 }
+.player{
+    display: flex;
+    flex-direction: row;
+}
+.int{
+    display: flex;
+}
+.flex-col{
+    display: flex;
+}
+#meeting{
+    color: red;
+}
+footer > p{
+    font-size: 10px;
+}
+
