--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,8 @@
     font-weight: 500;
     
 }
-.h-i2{
+#h-i2{
+    min-width: 20px;
     min-height: 20px;
     padding: 5px;
     color: white;
@@ -37,7 +38,7 @@
     margin: 5px;
     line-height: 20px;
     vertical-align: middle;
-    font-size: 16px;
+    font-size: 12px;
     text-align: center;
     border-radius: 5px;
 }
@@ -50,12 +51,15 @@
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    
 }
 .img{
     display: flex;
     width: calc(100% / 7);
     position: relative;
+    
 }
+    
 img{
     width: 100%;
     
@@ -77,37 +81,42 @@ img{
     height: 80px;
     width: 100%;
     margin-top: 50px;
-    background-color: chocolate;
+    background-color: rgb(34, 34, 34);
     
 }
 .flex-foot{
    display: flex;
-    min-height: 50px;
+   min-height: 50px;
     width: 100%;
     justify-content: space-between;
+    align-items: center;
 }
-.end-meet{
+.end{
     height: 100%;
-    min-width: 80px;
+    min-width: 50px;
     font-size: 12px;
     color: red;
     background-color: rgb(88, 88, 88);
-    line-height: 100px;
+    line-height: 80px;
     vertical-align: middle;
     text-align: center;
+    padding: 0 1em 0 1em;
 }
 
-i{
+footer i{
+    font-size: 25px;
     color: white;
-    font-size: 14px;
+    margin: 0 1em 0 1em;
+    
     
 }
 p{
     color: white;
 }
 .flex-col{
-    display: flex;
-    flex-direction: column;
+   display: flex;
+   flex-direction: column;
+   text-align: center;
 }
 .player{
     display: flex;
@@ -116,13 +125,30 @@ p{
 .int{
     display: flex;
 }
-.flex-col{
-    display: flex;
+#invite{
+    margin-right: 5px;
 }
+
+    
+
 #meeting{
     color: red;
 }
-footer > p{
+footer p{
     font-size: 10px;
+    padding: 1em;
+    text-align: center;
+    
 }
+.fa-chevron-up{
+    font-size: 8px;
+    color: white;
+    margin: 0;
+    padding-top: 20px;
+    
+}
+.fa-share-from-square{
+    color: greenyellow;
+}
+
 
