--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: sans-serif;
+    
 }
 .head-container{
     height: 70px;
@@ -45,20 +46,29 @@
 .fa-solid.fa-grip{
     font-size: 16px;
 }
+main{
+    min-height: calc(100vh -70 -80);
+    overflow-y: auto;
+    background-color: black;
+}
 .flex-container{
     margin: auto;
     width: 80%;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     flex-wrap: wrap;
+    
     
 }
 .img{
     display: flex;
     width: calc(100% / 7);
     position: relative;
-    
+    margin: 1px;
+   
 }
+
+
     
 img{
     width: 100%;
@@ -76,12 +86,17 @@ img{
     vertical-align: middle;
     line-height: 20px;
     font-size: 12px;
+    
+    
 }
+
+
 .footer-container{
     height: 80px;
     width: 100%;
     margin-top: 50px;
-    background-color: rgb(34, 34, 34);
+    background-color: rgb(49, 49, 49);
+    
     
 }
 .flex-foot{
@@ -90,18 +105,21 @@ img{
     width: 100%;
     justify-content: space-between;
     align-items: center;
+    
 }
 .end{
     height: 100%;
     min-width: 50px;
     font-size: 12px;
     color: red;
-    background-color: rgb(88, 88, 88);
+    background-color: rgb(80, 80, 80);
     line-height: 80px;
     vertical-align: middle;
     text-align: center;
     padding: 0 1em 0 1em;
 }
+
+
 
 footer i{
     font-size: 25px;
