--- a/css/style.css
+++ b/css/style.css
@@ -5,17 +5,19 @@
     font-family: sans-serif;
     
 }
-.head-container{
-    height: 70px;
-    width: 100%;
-    margin-bottom: 25px;
-    background-color: rgb(0, 0, 0);
+body{
+    background-color: black;
 }
+
+
 .flex-head{
+    height: 70px;
     width: 100%;
     display: flex;
     flex-direction: row-reverse;
-    align-items: flex-end;
+    align-items: center;
+    justify-content: flex-start;
+   
 }
 .h-item{
     min-height: 20px;
@@ -47,9 +49,10 @@
     font-size: 16px;
 }
 main{
-    min-height: calc(100vh -70 -80);
-    overflow-y: auto;
-    background-color: black;
+    height: calc(100vh - 150px);
+    overflow: auto;
+    
+    
 }
 .flex-container{
     margin: auto;
@@ -86,25 +89,14 @@ img{
     vertical-align: middle;
     line-height: 20px;
     font-size: 12px;
-    
-    
-}
-
-
-.footer-container{
-    height: 80px;
-    width: 100%;
-    margin-top: 50px;
-    background-color: rgb(49, 49, 49);
-    
-    
 }
 .flex-foot{
-   display: flex;
-   min-height: 50px;
+    display: flex;
+    height: 80px;
     width: 100%;
     justify-content: space-between;
     align-items: center;
+    
     
 }
 .end{
